Troubleshooting first visualization page, weird spacing issues for sub visualization navigation

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
   .right_box{
       margin: 100px 50px 10px 0px;
-      background: whitesmoke;
+      /*background: whitesmoke;*/
       height: 600px;
       width: 300px;
   }
@@ -57,6 +57,12 @@
       background: whitesmoke;
       height: 400px;
       width: 100px
+  }
+
+  .vis_title{
+      margin-top: 50px;
+      font-size: 20pt;
+      font-variant: small-caps;
   }
 
   .fill_box{
